--- a/playground/nginx/dockerfile
+++ b/playground/nginx/dockerfile
@@ -1,1 +1,6 @@
-FROM centos:7
+FROM alpine:3.16
+RUN apk update && apk upgrade && apk add --no-cache nginx openssl
+RUN openssl req -x509 -nodes -days 356 -newkey rsa:2048 -out /etc/ssl/certs/satushi.42.fr.crt -keyout /etc/ssl/private/satushi.42.fr.key -subj "/CN=satushi.42.fr/"	
+COPY conf/nginx.conf /etc/nginx/http.d
+EXPOSE 443
+CMD ["nginx", "-g", "daemon off;"]
