dbの立ち上げは成功？

--- a/playground/nginx/nginx.conf
+++ b/playground/nginx/nginx.conf
@@ -1,10 +1,21 @@
+; listen: 
+# クライアントからの接続を待ち受けるポートやIPアドレスを指定します。
+; server_name: 
+# リクエストのホスト名にマッチするドメイン名を指定します。
+# この設定により、正しい「server」ブロックが選択されます。
+; root: 静的ファイルのルートディレクトリを指定します。
+; index: デフォルトのインデックスファイル（例: index.html）を指定します。
+; location: 特定のURLパスや条件に一致するリクエストを処理するための詳細な設定を指定します。
+
 server {
     listen          443 ssl;
     server_name     satushi.42.fr www.satushi.42.fr;
 
+	error_log /etc/log/nginx/error.log;
+
     ssl on;
-    ssl_certificate     /etc/ssl/certs/hoomen.42.fr.crt;
-    ssl_certificate_key /etc/ssl/private/hoomen.42.fr.key;
+    ssl_certificate     /etc/ssl/certs/satushi.42.fr.crt;
+    ssl_certificate_key /etc/ssl/private/satushi.42.fr.key;
     ssl_protocols       TLSv1.3;
 
     root    /var/www/;
