--- a/playground/nginx/nginx.conf
+++ b/playground/nginx/nginx.conf
@@ -19,7 +19,7 @@ server {
     ssl_protocols       TLSv1.3;
 
     root    /var/www/;
-    index   index.php;
+    index   index.php index.html;
 
     location / {
         try_files $uri /index.php?$args;
