--- a/playground/.env
+++ b/playground/.env
@@ -7,6 +7,7 @@ DB_USER=wpuser
 DB_ROOT=rootpass
 DB_PASS=wppass
 
+WP_TITLE=test
 WP_ADMIN_USER=satushi
 WP_ADMIN_PASS=1234
 WP_ADMIN_MAIL=sakata19991214@gmail.com
