--- a/playground/Makefile
+++ b/playground/Makefile
@@ -1,6 +1,6 @@
 NAME = inception
 COMPOSE_FILE = docker-compose.yml
-COMPOSE = docker compose -f $(COMPOSE_FILE)
+COMPOSE = docker-compose -f $(COMPOSE_FILE)
 
 VOLUME_DIR			= /home/satushi/data
 
@@ -9,15 +9,23 @@ WP_DB_VOLUME		= $(VOLUME_DIR)/mariadb
 
 all: $(NAME)
 
-$(NAME): $(COMPOSE_FILE) create_volumes
-		$(COMPOSE) up -d --build
+$(NAME): $(COMPOSE_FILE) create_volumes setup_domain
+		$(COMPOSE) up &
+
+setup_domain:
+	@if ! grep -q -E '^127\.0\.0\.1\s+satushi.42.fr' /etc/hosts ; then \
+		echo "Add 127.0.0.1 to satushi.42.fr in /etc/hosts!"; \
+		sudo sh -c 'echo "127.0.0.1\satushi.42.fr" >> /etc/hosts'; \
+	fi
 
 #mkdir $(WP_CONTENT_VOLUME) $(WP_DB_VOLUME)
 create_volumes:
-	mkdir -p $(WP_CONTENT_VOLUME) $(WP_DB_VOLUME)
+	sudo mkdir -p $(WP_CONTENT_VOLUME) $(WP_DB_VOLUME)
 
 down:
 	$(COMPOSE) down
+	sudo rm -rf $(WP_CONTENT_VOLUME)
+	sudo rm -rf $(WP_DB_VOLUME)
 
 #docker system prune -a --force --volumes
 #停止しているコンテナ、未使用のイメージ、未使用のネットワーク、および未使用のボリュームを削除します
