--- a/playground/.env
+++ b/playground/.env
@@ -1,17 +1,16 @@
-#envfileに使用する全ての環境変数を記載しておく必要がある
+MYSQL_HOST=mariadb
+MYSQL_ROOT_PASSWORD=password
+
+WP_DATABASE_NAME=wordpress
+WP_DATABASE_USER=wpuser
+WP_DATABASE_PASSWORD=password
 
 DOMAIN_NAME=localhost
-DB_HOST=mariadb
-DB_NAME=wordpress
-DB_USER=wpuser
-DB_ROOT=rootpass
-DB_PASS=wppass
 
-WP_TITLE=test
-WP_ADMIN_USER=satushi
-WP_ADMIN_PASS=1234
-WP_ADMIN_MAIL=sakata19991214@gmail.com
-
-WP_USER=satushi
-WP_USER_PASS=1234
-WP_USER_MAIL=sakata19991214@gmail.com
+WP_TITLE=Inseption
+WP_ADMIN_USER=pikachu
+WP_ADMIN_PASSWORD=pikachu
+WP_ADMIN_EMAIL=sakata19991214@gmail.com
+WP_USER=jtanaka
+WP_PASSWORD=jtanaka
+WP_EMAIL=jtanaka@student.42tokyo.jp
