--- a/playground/db/dockerfile
+++ b/playground/db/dockerfile
@@ -1,20 +1,16 @@
 #https://hub.docker.com/_/mariadb
 #　この辺読めば幸せ
 
-FROM alpine:3.16
-ARG	DB_PASS \
-	DB_DATABASE \
-	DB_USER \
-	DB_NAME \
-	DB_ROOT
+FROM debian:buster
 
-RUN apk update && \
-		apk upgrade && \
-		apk add --no-cache mariadb mariadb-client
-#多分mariadbはd好きインストール時に設定があり、その設定はきちんと設定されれていないためshファイルを用いた変更が必要である
+# MariaDB
+RUN apt-get update \
+  && apt-get install -y mariadb-server mariadb-client
+
+# For debugging
+RUN apt-get update \
+  && apt-get install -y vim
+
 COPY db.sh .
-RUN chmod +x db.sh && \
-		sh db.sh && \
-		rm db.sh
-USER	mysql
-CMD ["mysqld"]
+
+CMD [ "bash", "db.sh" ]
