--- a/playground/db/dockerfile
+++ b/playground/db/dockerfile
@@ -5,11 +5,7 @@ FROM debian:buster
 
 # MariaDB
 RUN apt-get update \
-  && apt-get install -y mariadb-server mariadb-client
-
-# For debugging
-RUN apt-get update \
-  && apt-get install -y vim
+  && apt-get install -y mariadb-server mariadb-client vim
 
 COPY db.sh .
 
