--- a/playground/nginx/dockerfile
+++ b/playground/nginx/dockerfile
@@ -10,8 +10,13 @@ RUN apt-get update \
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY default.conf /etc/nginx/conf.d/default.conf
 
-COPY config.sh .
-RUN bash config.sh
+# COPY config.sh .
+# RUN bash config.sh
+
+RUN mkdir /etc/nginx/ssl
+RUN openssl genrsa -out /etc/nginx/ssl/server.key
+RUN openssl req -new -key /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.csr -subj "/CN=example.com"
+RUN openssl x509 -req -signkey /etc/nginx/ssl/server.key -in /etc/nginx/ssl/server.csr -out /etc/nginx/ssl/server.crt
 
 RUN adduser --system --group --no-create-home nginx
 
