--- a/playground/nginx/nginx.conf
+++ b/playground/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
-    access_log  /dev/stdout  main;
+    # access_log  /dev/stdout  main;
 
     sendfile        on;
     tcp_nopush      on;
