--- a/playground/docker-compose.yml
+++ b/playground/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     expose:
       - "9000"
     depends_on:
-      - db
+      - mariadb
     networks:
       - docker-network
     volumes:
