--- a/playground/nginx/dockerfile
+++ b/playground/nginx/dockerfile
@@ -7,7 +7,7 @@ COPY nginx.conf /etc/nginx/nginx.conf
 COPY default.conf /etc/nginx/conf.d/default.conf
 
 RUN mkdir /etc/nginx/ssl
-RUN openssl genrsa -out /etc/nginx/ssl/server.key
+RUN openssl genrsa -out /etc/nginx/ssl/server.key 3072
 RUN openssl req -new -key /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.csr -subj "/CN=example.com"
 RUN openssl x509 -req -signkey /etc/nginx/ssl/server.key -in /etc/nginx/ssl/server.csr -out /etc/nginx/ssl/server.crt
 
